Github Actions: Update YouTube list

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -27,6 +27,6 @@ jobs:
           push-branch: "master"
           commit-message: "CI: Update README.md and website"
           force-add: "true"
-          files: README.md docs/index.html
+          files: README.md docs/index.html data/youtube.txt
           name: andys8
           email: andys8@users.noreply.github.com
